--- a/CPP_Practice.ipynb
+++ b/CPP_Practice.ipynb
@@ -1603,228 +1603,323 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62033dba",
+   "id": "8a7440c2",
    "metadata": {},
    "source": [
-    "#### Pattern \n",
+    "#### Pattern 32\n",
     "<pre>\n",
-    "\n",
+    "   1\n",
+    "  23\n",
+    " 456\n",
     "</pre>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9f7b538e",
+   "execution_count": 39,
+   "id": "3ca7acea",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  1\n",
+      " 23\n",
+      "456\n"
+     ]
+    }
+   ],
+   "source": [
+    "int row=1,n=3,count=1;\n",
+    "while(row<=n){\n",
+    "    int gap=n-row;\n",
+    "    while(gap){\n",
+    "        cout<<\" \";\n",
+    "        gap--;\n",
+    "    }\n",
+    "    int col=1;\n",
+    "    while(col<=row){\n",
+    "        cout<<count;\n",
+    "        count++;\n",
+    "        col++;\n",
+    "    }\n",
+    "    cout<<endl;\n",
+    "    row++;\n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "70a86bcc",
+   "id": "2fa21797",
    "metadata": {},
    "source": [
-    "#### Pattern \n",
+    "#### Pattern 33\n",
     "<pre>\n",
-    "\n",
+    "   1\n",
+    "  121\n",
+    " 12321\n",
+    "1234321\n",
     "</pre>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "859d3ae2",
+   "execution_count": 40,
+   "id": "3acd805c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   1\n",
+      "  121\n",
+      " 12321\n",
+      "1234321\n"
+     ]
+    }
+   ],
+   "source": [
+    "int row=1, n=4;\n",
+    "while(row<=n){\n",
+    "    int gap=n-row;\n",
+    "    while(gap){\n",
+    "        cout<<\" \";\n",
+    "        gap--;\n",
+    "    }\n",
+    "    int col=1;\n",
+    "    while(col<=row){\n",
+    "        cout<<col;\n",
+    "        col++;\n",
+    "    }\n",
+    "    int k=row-1;\n",
+    "    while(k){\n",
+    "        cout<<k;\n",
+    "        k--;\n",
+    "    }\n",
+    "    cout<<endl;\n",
+    "    row++;\n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "2ec47d7c",
+   "id": "adddd373",
    "metadata": {},
    "source": [
-    "#### Pattern \n",
+    "#### Pattern 34\n",
     "<pre>\n",
-    "\n",
+    "   *\n",
+    "  ***\n",
+    " *****\n",
+    "*******\n",
     "</pre>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "25eaef6b",
+   "execution_count": 41,
+   "id": "640b5010",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   *\n",
+      "  ***\n",
+      " *****\n",
+      "*******\n"
+     ]
+    }
+   ],
+   "source": [
+    "int row=1, n=4;\n",
+    "while(row<=n){\n",
+    "    int gap=n-row;\n",
+    "    while(gap){\n",
+    "        cout<<\" \";\n",
+    "        gap--;\n",
+    "    }\n",
+    "    int col=1;\n",
+    "    while(col<=row){\n",
+    "        cout<<\"*\";\n",
+    "        col++;\n",
+    "    }\n",
+    "    int k=row-1;\n",
+    "    while(k){\n",
+    "        cout<<\"*\";\n",
+    "        k--;\n",
+    "    }\n",
+    "    cout<<endl;\n",
+    "    row++;\n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "f5b8808a",
+   "id": "78463e4d",
    "metadata": {},
    "source": [
-    "#### Pattern \n",
+    "#### Pattern 34\n",
     "<pre>\n",
-    "\n",
+    "*******\n",
+    " *****\n",
+    "  ***\n",
+    "   *\n",
     "</pre>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e5fca166",
+   "execution_count": 45,
+   "id": "cf98bec9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*******\n",
+      " *****\n",
+      "  ***\n",
+      "   *\n"
+     ]
+    }
+   ],
+   "source": [
+    "int n=4, row=1;\n",
+    "while(row<=4){\n",
+    "    int col=1;\n",
+    "    while(col<=n){\n",
+    "        if(col<row){\n",
+    "            cout<<\" \";\n",
+    "        }\n",
+    "        else{\n",
+    "            cout<<\"*\";\n",
+    "        }\n",
+    "        col++;\n",
+    "    }\n",
+    "    int k=n-row;\n",
+    "    while(k){\n",
+    "        cout<<\"*\";\n",
+    "        k--;\n",
+    "    }\n",
+    "    cout<<endl;\n",
+    "    row++;\n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "96bbaa5d",
+   "id": "cb4f8cff",
    "metadata": {},
    "source": [
-    "#### Pattern \n",
+    "#### Pattern 35\n",
     "<pre>\n",
-    "\n",
+    "1234321\n",
+    " 12321\n",
+    "  121\n",
+    "   1\n",
     "</pre>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b10f8980",
+   "id": "a73feb4a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "int n=4, row=1;\n",
+    "while(row<=4){\n",
+    "    int col=1;\n",
+    "    while(col<=n){\n",
+    "        if(col<row){\n",
+    "            cout<<\" \";\n",
+    "        }\n",
+    "        else{\n",
+    "            cout<<\"*\";\n",
+    "        }\n",
+    "        col++;\n",
+    "    }\n",
+    "    int k=n-row;\n",
+    "    while(k){\n",
+    "        cout<<;\n",
+    "        k--;\n",
+    "    }\n",
+    "    cout<<endl;\n",
+    "    row++;\n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "6b7eae25",
+   "id": "2de1b929",
    "metadata": {},
    "source": [
-    "#### Pattern \n",
+    "#### Pattern 36\n",
     "<pre>\n",
-    "\n",
+    "12345*54321\n",
+    "1234***4321\n",
+    "123*****321\n",
+    "12*******21\n",
+    "1*********1\n",
     "</pre>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f51a87d4",
+   "execution_count": 43,
+   "id": "8153789e",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c48ab64e",
-   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12345*54321\n",
+      "1234***4321\n",
+      "123*****321\n",
+      "12*******21\n",
+      "1*********1\n"
+     ]
+    }
+   ],
    "source": [
-    "#### Pattern \n",
-    "<pre>\n",
-    "\n",
-    "</pre>"
+    "int row=1, n=5;\n",
+    "while(row<=n){\n",
+    "    int gap=(n-row)+1,count=1;\n",
+    "    while(gap){\n",
+    "        cout<<count;\n",
+    "        gap--;\n",
+    "        count++;\n",
+    "    }\n",
+    "    int col=1;\n",
+    "    while(col<=row){\n",
+    "        cout<<\"*\";\n",
+    "        col++;\n",
+    "    }\n",
+    "    int k=row-1;\n",
+    "    while(k){\n",
+    "        cout<<\"*\";\n",
+    "        k--;\n",
+    "    }\n",
+    "    int end=(n-row)+1;\n",
+    "    while(end){\n",
+    "        cout<<end;\n",
+    "        end--;\n",
+    "    }\n",
+    "    cout<<endl;\n",
+    "    row++;\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "694e314d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "aa30fd24",
-   "metadata": {},
-   "source": [
-    "#### Pattern \n",
-    "<pre>\n",
-    "\n",
-    "</pre>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "634b2c96",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fec21134",
-   "metadata": {},
-   "source": [
-    "#### Pattern \n",
-    "<pre>\n",
-    "\n",
-    "</pre>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0bd97c85",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6f5dd979",
-   "metadata": {},
-   "source": [
-    "#### Pattern \n",
-    "<pre>\n",
-    "\n",
-    "</pre>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4fd56300",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "be8969a6",
-   "metadata": {},
-   "source": [
-    "#### Pattern \n",
-    "<pre>\n",
-    "\n",
-    "</pre>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e5ed2c08",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "90bdb7c9",
-   "metadata": {},
-   "source": [
-    "#### Pattern \n",
-    "<pre>\n",
-    "\n",
-    "</pre>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7dead2d0",
+   "id": "76fdff73",
    "metadata": {},
    "outputs": [],
    "source": []
