--- a/CPP_Practice.ipynb
+++ b/CPP_Practice.ipynb
@@ -1603,7 +1603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a7440c2",
+   "id": "3baa9c09",
    "metadata": {},
    "source": [
     "#### Pattern 32\n",
@@ -1617,7 +1617,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "3ca7acea",
+   "id": "67b4c72c",
    "metadata": {},
    "outputs": [
     {
@@ -1651,7 +1651,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fa21797",
+   "id": "0d62a9dc",
    "metadata": {},
    "source": [
     "#### Pattern 33\n",
@@ -1666,7 +1666,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "3acd805c",
+   "id": "ed23756a",
    "metadata": {},
    "outputs": [
     {
@@ -1705,7 +1705,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adddd373",
+   "id": "b91715c2",
    "metadata": {},
    "source": [
     "#### Pattern 34\n",
@@ -1720,7 +1720,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "640b5010",
+   "id": "4ff92210",
    "metadata": {},
    "outputs": [
     {
@@ -1759,7 +1759,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78463e4d",
+   "id": "f9ff5973",
    "metadata": {},
    "source": [
     "#### Pattern 34\n",
@@ -1773,8 +1773,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "cf98bec9",
+   "execution_count": 42,
+   "id": "505b1d2e",
    "metadata": {},
    "outputs": [
     {
@@ -1813,7 +1813,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb4f8cff",
+   "id": "d840406e",
    "metadata": {},
    "source": [
     "#### Pattern 35\n",
@@ -1827,10 +1827,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a73feb4a",
+   "execution_count": 43,
+   "id": "837aafb9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1234321\n",
+      " 23421\n",
+      "  341\n",
+      "   4\n"
+     ]
+    }
+   ],
    "source": [
     "int n=4, row=1;\n",
     "while(row<=4){\n",
@@ -1840,13 +1851,13 @@
     "            cout<<\" \";\n",
     "        }\n",
     "        else{\n",
-    "            cout<<\"*\";\n",
+    "            cout<<col;\n",
     "        }\n",
     "        col++;\n",
     "    }\n",
     "    int k=n-row;\n",
     "    while(k){\n",
-    "        cout<<;\n",
+    "        cout<<k;\n",
     "        k--;\n",
     "    }\n",
     "    cout<<endl;\n",
@@ -1856,7 +1867,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2de1b929",
+   "id": "e194e1f7",
    "metadata": {},
    "source": [
     "#### Pattern 36\n",
@@ -1871,8 +1882,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "8153789e",
+   "execution_count": 44,
+   "id": "f4b7656d",
    "metadata": {},
    "outputs": [
     {
@@ -1919,7 +1930,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76fdff73",
+   "id": "a9d4b674",
    "metadata": {},
    "outputs": [],
    "source": []
