--- a/CPP_Practice.ipynb
+++ b/CPP_Practice.ipynb
@@ -960,17 +960,7 @@
    "execution_count": 25,
    "id": "a7a1c41b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ABC\n",
-      "DEF\n",
-      "GHI\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "int n=3, row=1;\n",
     "char val='A';\n",
@@ -1004,17 +994,7 @@
    "execution_count": 26,
    "id": "454debb3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ABC\n",
-      "BCD\n",
-      "CDE\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "int row=1, n=3;\n",
     "while(row<=n){\n",
@@ -1048,17 +1028,7 @@
    "execution_count": 27,
    "id": "2629e51e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A\n",
-      "BB\n",
-      "CCC\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "int row=1, n=3;\n",
     "while(row<=n){\n",
@@ -1094,17 +1064,7 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A\n",
-      "BC\n",
-      "CDE\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "int row=1, n=3;\n",
     "while(row<=n){\n",
@@ -1140,17 +1100,7 @@
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A\n",
-      "BC\n",
-      "DEF\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "int row=1, n=3;;\n",
     "char val='A';\n",
@@ -1184,17 +1134,7 @@
    "execution_count": 30,
    "id": "4efcb982",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A\n",
-      "AB\n",
-      "ABC\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "int row=1, n=3;\n",
     "while(row<=n){\n",
@@ -1229,18 +1169,7 @@
    "execution_count": 31,
    "id": "76e9be3f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "D\n",
-      "CD\n",
-      "BCD\n",
-      "ABCD\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "int row=1, n=4;\n",
     "while(row<=n){\n",
@@ -1274,18 +1203,7 @@
    "execution_count": 32,
    "id": "0beb02d5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n",
-      "34\n",
-      "234\n",
-      "1234\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "int row=1, n=4;\n",
     "while(row<=n){\n",
@@ -1320,18 +1238,7 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   *\n",
-      "  **\n",
-      " ***\n",
-      "****\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "int row=1, n=4;\n",
     "while(row<=n){\n",
@@ -1369,18 +1276,7 @@
    "execution_count": 34,
    "id": "f0291618",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   1\n",
-      "  22\n",
-      " 333\n",
-      "4444\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "int row=1, n=4;\n",
     "while(row<=n){\n",
@@ -1420,18 +1316,7 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   1\n",
-      "  12\n",
-      " 123\n",
-      "1234\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "int row=1, n=4;\n",
     "while(row<=n){\n",
@@ -1471,18 +1356,7 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "****\n",
-      " ***\n",
-      "  **\n",
-      "   *\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "int row=1,n=4;\n",
     "while(row<=n){\n",
@@ -1522,18 +1396,7 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1234\n",
-      " 234\n",
-      "  34\n",
-      "   4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "int row=1,n=4;\n",
     "while(row<=n){\n",
@@ -1571,18 +1434,7 @@
    "execution_count": 38,
    "id": "6f57c6f4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1111\n",
-      " 222\n",
-      "  33\n",
-      "   4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "int row=1,n=4;\n",
     "while(row<=n){\n",
@@ -1619,17 +1471,7 @@
    "execution_count": 39,
    "id": "67b4c72c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  1\n",
-      " 23\n",
-      "456\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "int row=1,n=3,count=1;\n",
     "while(row<=n){\n",
@@ -1668,18 +1510,7 @@
    "execution_count": 40,
    "id": "ed23756a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   1\n",
-      "  121\n",
-      " 12321\n",
-      "1234321\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "int row=1, n=4;\n",
     "while(row<=n){\n",
@@ -1722,18 +1553,7 @@
    "execution_count": 41,
    "id": "4ff92210",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   *\n",
-      "  ***\n",
-      " *****\n",
-      "*******\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "int row=1, n=4;\n",
     "while(row<=n){\n",
@@ -1776,18 +1596,7 @@
    "execution_count": 42,
    "id": "505b1d2e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*******\n",
-      " *****\n",
-      "  ***\n",
-      "   *\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "int n=4, row=1;\n",
     "while(row<=4){\n",
@@ -1830,18 +1639,7 @@
    "execution_count": 43,
    "id": "837aafb9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1234321\n",
-      " 23421\n",
-      "  341\n",
-      "   4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "int n=4, row=1;\n",
     "while(row<=4){\n",
@@ -1885,19 +1683,7 @@
    "execution_count": 44,
    "id": "f4b7656d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "12345*54321\n",
-      "1234***4321\n",
-      "123*****321\n",
-      "12*******21\n",
-      "1*********1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "int row=1, n=5;\n",
     "while(row<=n){\n",
@@ -1928,12 +1714,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "53666e16",
+   "metadata": {},
+   "source": [
+    "#### Pattern 37\n",
+    "<pre>\n",
+    "****\n",
+    "*  *\n",
+    "*  *\n",
+    "****\n",
+    "</pre>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a9d4b674",
+   "execution_count": 45,
+   "id": "a2f5ccb7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "int n=4, r=1;\n",
+    "    while(r<=n){\n",
+    "        int c=1;\n",
+    "        while(c<=n){\n",
+    "            if(c==1 || c==n || r==1 || r==n){\n",
+    "                cout<<\"*\";\n",
+    "            }\n",
+    "            else{\n",
+    "                cout<<\" \";\n",
+    "            }\n",
+    "            c++;\n",
+    "        }\n",
+    "        cout<<endl;\n",
+    "        r++;\n",
+    "    }"
+   ]
   }
  ],
  "metadata": {
