--- a/CPP_Practice.ipynb
+++ b/CPP_Practice.ipynb
@@ -960,7 +960,17 @@
    "execution_count": 25,
    "id": "a7a1c41b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ABC\n",
+      "DEF\n",
+      "GHI\n"
+     ]
+    }
+   ],
    "source": [
     "int n=3, row=1;\n",
     "char val='A';\n",
@@ -994,7 +1004,17 @@
    "execution_count": 26,
    "id": "454debb3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ABC\n",
+      "BCD\n",
+      "CDE\n"
+     ]
+    }
+   ],
    "source": [
     "int row=1, n=3;\n",
     "while(row<=n){\n",
@@ -1028,7 +1048,17 @@
    "execution_count": 27,
    "id": "2629e51e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "BB\n",
+      "CCC\n"
+     ]
+    }
+   ],
    "source": [
     "int row=1, n=3;\n",
     "while(row<=n){\n",
@@ -1064,7 +1094,17 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "BC\n",
+      "CDE\n"
+     ]
+    }
+   ],
    "source": [
     "int row=1, n=3;\n",
     "while(row<=n){\n",
@@ -1100,7 +1140,17 @@
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "BC\n",
+      "DEF\n"
+     ]
+    }
+   ],
    "source": [
     "int row=1, n=3;;\n",
     "char val='A';\n",
@@ -1134,7 +1184,17 @@
    "execution_count": 30,
    "id": "4efcb982",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "AB\n",
+      "ABC\n"
+     ]
+    }
+   ],
    "source": [
     "int row=1, n=3;\n",
     "while(row<=n){\n",
@@ -1169,7 +1229,18 @@
    "execution_count": 31,
    "id": "76e9be3f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D\n",
+      "CD\n",
+      "BCD\n",
+      "ABCD\n"
+     ]
+    }
+   ],
    "source": [
     "int row=1, n=4;\n",
     "while(row<=n){\n",
@@ -1203,7 +1274,18 @@
    "execution_count": 32,
    "id": "0beb02d5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "34\n",
+      "234\n",
+      "1234\n"
+     ]
+    }
+   ],
    "source": [
     "int row=1, n=4;\n",
     "while(row<=n){\n",
@@ -1238,7 +1320,18 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   *\n",
+      "  **\n",
+      " ***\n",
+      "****\n"
+     ]
+    }
+   ],
    "source": [
     "int row=1, n=4;\n",
     "while(row<=n){\n",
@@ -1276,7 +1369,18 @@
    "execution_count": 34,
    "id": "f0291618",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   1\n",
+      "  22\n",
+      " 333\n",
+      "4444\n"
+     ]
+    }
+   ],
    "source": [
     "int row=1, n=4;\n",
     "while(row<=n){\n",
@@ -1316,7 +1420,18 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   1\n",
+      "  12\n",
+      " 123\n",
+      "1234\n"
+     ]
+    }
+   ],
    "source": [
     "int row=1, n=4;\n",
     "while(row<=n){\n",
@@ -1356,7 +1471,18 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "****\n",
+      " ***\n",
+      "  **\n",
+      "   *\n"
+     ]
+    }
+   ],
    "source": [
     "int row=1,n=4;\n",
     "while(row<=n){\n",
@@ -1396,7 +1522,18 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1234\n",
+      " 234\n",
+      "  34\n",
+      "   4\n"
+     ]
+    }
+   ],
    "source": [
     "int row=1,n=4;\n",
     "while(row<=n){\n",
@@ -1434,7 +1571,18 @@
    "execution_count": 38,
    "id": "6f57c6f4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1111\n",
+      " 222\n",
+      "  33\n",
+      "   4\n"
+     ]
+    }
+   ],
    "source": [
     "int row=1,n=4;\n",
     "while(row<=n){\n",
@@ -1471,7 +1619,17 @@
    "execution_count": 39,
    "id": "67b4c72c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  1\n",
+      " 23\n",
+      "456\n"
+     ]
+    }
+   ],
    "source": [
     "int row=1,n=3,count=1;\n",
     "while(row<=n){\n",
@@ -1510,7 +1668,18 @@
    "execution_count": 40,
    "id": "ed23756a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   1\n",
+      "  121\n",
+      " 12321\n",
+      "1234321\n"
+     ]
+    }
+   ],
    "source": [
     "int row=1, n=4;\n",
     "while(row<=n){\n",
@@ -1553,7 +1722,18 @@
    "execution_count": 41,
    "id": "4ff92210",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   *\n",
+      "  ***\n",
+      " *****\n",
+      "*******\n"
+     ]
+    }
+   ],
    "source": [
     "int row=1, n=4;\n",
     "while(row<=n){\n",
@@ -1596,7 +1776,18 @@
    "execution_count": 42,
    "id": "505b1d2e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*******\n",
+      " *****\n",
+      "  ***\n",
+      "   *\n"
+     ]
+    }
+   ],
    "source": [
     "int n=4, row=1;\n",
     "while(row<=4){\n",
@@ -1639,7 +1830,18 @@
    "execution_count": 43,
    "id": "837aafb9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1234321\n",
+      " 23421\n",
+      "  341\n",
+      "   4\n"
+     ]
+    }
+   ],
    "source": [
     "int n=4, row=1;\n",
     "while(row<=4){\n",
@@ -1683,7 +1885,19 @@
    "execution_count": 44,
    "id": "f4b7656d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12345*54321\n",
+      "1234***4321\n",
+      "123*****321\n",
+      "12*******21\n",
+      "1*********1\n"
+     ]
+    }
+   ],
    "source": [
     "int row=1, n=5;\n",
     "while(row<=n){\n",
@@ -1715,7 +1929,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53666e16",
+   "id": "0cd306ae",
    "metadata": {},
    "source": [
     "#### Pattern 37\n",
@@ -1730,9 +1944,20 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "a2f5ccb7",
+   "id": "74339da8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "****\n",
+      "*  *\n",
+      "*  *\n",
+      "****\n"
+     ]
+    }
+   ],
    "source": [
     "int n=4, r=1;\n",
     "    while(r<=n){\n",
@@ -1750,6 +1975,20 @@
     "        r++;\n",
     "    }"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8f172ef",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9157097f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
